--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -9374,7 +9374,7 @@ Responsive Design
     color: #fff;
 }
 
-#welcome-panel {
+#welcome-panel:has(#frm_form_pf_importer)  {
 	margin: var(--gap-sm) var(--gap-md) var(--gap-md);
 	line-height: 2;
 }
