Refactor: Consolidate styles by adding #frm-form-templates-page .frm-right-panel to line 829 in frm_admin.css

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -826,7 +826,8 @@ p.frm_has_shortcodes {
 }
 
 #form_global_settings .columns-2 .frm-right-panel,
-#form_settings_page .columns-2 .frm-right-panel {
+#form_settings_page .columns-2 .frm-right-panel,
+#frm-form-templates-page .frm-right-panel {
 	flex: 0 0 var(--small-sidebar);
 	width: var(--small-sidebar);
 	min-width: var(--small-sidebar);
