Make more css reusable switch .frm-upgrade-modal-lock-icon to .frm-circled-icon for reusability Switch .frm-upgrade-modal-banner to .frm-green-banner Update the standard upgrade overlay to match Switch #frm-upgrade-modal to #frm-form-upgrade-modal to avoid confusion with existing #frm_upgrade_modal Use consistent h2 for modals Use consistent x placement and color for modals Clean up the image icons in view and app modal alignment

--- a/css/admin/form-templates.css
+++ b/css/admin/form-templates.css
@@ -351,55 +351,9 @@
 }
 
 /* Upgrade Modal */
-#frm-upgrade-modal p {
-	color: var(--grey-900);
-}
 
-.frm-upgrade-modal-lock-icon {
-	width: 60px;
-	height: 60px;
-	border-radius: 50%;
-	background-color: var(--primary-25);
-}
-
-.frm-upgrade-modal-lock-icon .frmsvg {
-	width: 21px;
-	height: 24px;
-}
-
-.frm-upgrade-modal-lock-icon .frmsvg use {
-	color: var(--primary-500);
- }
-
-#frm-upgrade-modal .frm-upgrade-modal-banner {
-	padding: 12px 20px;
-	border-radius: var(--small-radius);
-	background-color: var(--success-25);
-}
-
-#frm-upgrade-modal .frm-upgrade-modal-banner-title {
-	gap: calc(var(--gap-2xs) + 1px);
-	color: var(--grey-700);
-}
-
-#frm-upgrade-modal .frm-upgrade-modal-banner-text {
-	color: var(--grey-500);
-}
-
-#frm-upgrade-modal .frm-upgrade-modal-banner-tag {
-	color: #fff;
-	font-weight: 600;
-	padding: var(--gap-2xs) var(--gap-xs);
-	border-radius: var(--small-radius);
-	background-color: var(--success-500);
-}
-
-#frm-upgrade-modal .frm-upgrade-modal-plan-icon {
+#frm-form-upgrade-modal .frm-upgrade-modal-plan-icon {
 	color: var(--error-500);
-}
-
-#frm-upgrade-modal .frm-upgrade-modal-plan-icon.frm-plan-checkmark-icon {
-	color: var(--success-500);
 }
 
 /* Code from email modal */
