Switch frm-form-templates-item to frm-card-item for reuse Use frm-card-item on applications page so they match Add super powers emoji back in Fix a grid container class for applications

--- a/css/admin/applications.css
+++ b/css/admin/applications.css
@@ -48,13 +48,9 @@
 }
 
 .frm-application-card {
-	border-radius: var(--small-radius);
-	background: #FFFFFF;
 	grid-column: span 3/span 3; /* treat as frm3 */
-	padding: 10px 0;
-	display: flex;
 	flex-direction: column;
-	box-shadow: var(--box-shadow-sm);
+	gap: 0;
 }
 
 .frm-application-template-card {
