Move template hooks since we were already loading the class Cut down on 1 hook to save a little on memory Apply same scrollbar styling on form settings page Use more reliable way of checking if element is visible Simplify code for admin cta Move more php out of view file Revert one unwanted line change spacing

--- a/css/admin/form-templates.css
+++ b/css/admin/form-templates.css
@@ -28,6 +28,10 @@
 	overflow-y: initial;
 }
 
+#frm-form-templates-page .frm-scrollbar-wrapper {
+	padding: var(--gap-md) var(--gap-sm);
+}
+
 /* Search Box */
 #frm-form-templates-page .frm-search {
 	float: none;
